# rss-digest

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
.windsurf/skills/adr-management/: SKILL.md
.windsurf/skills/adr-management/assets/: adr-template.md
_ai/backlog/active/: 260228_1803__IMPLEMENTATION_PLAN__generic-smtp-email.md  260301_1255__IMPLEMENTATION_PLAN__refactor_to_curation_engine.md  260301_1347__IMPLEMENTATION_PLAN__github_pages_blog.md
_ai/backlog/reports/: 260228_1803__IMPLEMENTATION_REPORT__generic-smtp-email.md  260301_1255__IMPLEMENTATION_REPORT__refactor_to_curation_engine.md  260301_1347__IMPLEMENTATION_REPORT__github_pages_blog.md
config/: loader.py
configs/: ai-assisted-programming.toml  ai-weekly.toml  daily.toml  tech-daily.toml
content/digests/: 2026-03-01-ai-assisted-programming.md
docs/adr/: 001-relocate-python-configuration-to-src.md
scripts/: generate-and-blog.sh  generate-and-email.sh
src/: cli.py  config.py  email_sender.py  llm_processor.py  main.py
src/commands/: generate_cmd.py  publish_cmd.py
src/config/: __init__.py  feeds.py
src/core/: interfaces.py  models.py
src/fetchers/: rss.py
src/publishers/: email.py  file_system.py  github_pages.py
tests/: __init__.py  test_interfaces.py  test_models.py  test_rss.py
